test/types/type_variables/ferguson/type-alias-generic.good
type-alias-generic.chpl:5: warning: please use '?' when declaring a type alias with generic type
type-alias-generic.chpl:5: note: for example with 'RG(?)'
type-alias-generic.chpl:9: error: cannot use a generic type as the default for a type field, 'badField'
